--- a/node_login/package.json
+++ b/node_login/package.json
@@ -10,8 +10,11 @@
   "author": "Giorgi Janelidze",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pg": "^8.11.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
